screen-2 complete; fix z-index fixed-phone

--- a/sass/block/_fixed-phone.sass
+++ b/sass/block/_fixed-phone.sass
@@ -3,6 +3,7 @@
 	position: fixed
 	bottom: 40px
 	right: 40px
+	z-index: 20
 	width: 60px
 	height: 60px
 	box-sizing: border-box
