--- a/sass/block/_popup's.sass
+++ b/sass/block/_popup's.sass
@@ -17,7 +17,7 @@ body.hide-scroll
 	transition: .25s
 	&_active
 		opacity: 1
-		z-index: 10
+		z-index: 30
 	&__content
 		display: flex
 		justify-content: center
